--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -240,6 +240,8 @@
   .navbar-toggler {
     color: $navbar-light-color;
     border-color: $navbar-light-toggler-border-color;
+    position: fixed;
+    margin-left: 80%;
   }
 
   .navbar-toggler-icon {
